--- a/assignment5/app/src/main/res/values/strings.xml
+++ b/assignment5/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">assignment5</string>
+    <string name="easy">Easy</string>
+    <string name="intermediate">Intermediate</string>
+    <string name="advanced">Advanced</string>
 </resources>
